<resources>
    <string name="app_name">Volo</string>
    <string name="sound">Sound</string>
    <string name="leader_board">Leader board</string>
    <string name="title">Volo</string>
    <string name="play">Play</string>
    <string name="quarklab">www.quarklabs.co</string>
    <string name="facebook_app_id">916130085175917</string>
    <string name="save_player_api">/players</string>
    <string name="update_score_api">/players/update_score</string>
    <string name="leader_board_api">/rank</string>
    <string name="server_problem">Server under maintenance, try again later.</string>
    <string name="banner_ad_unit_id">ca-app-pub-5665008338785349/8698851718</string>
    <string name="default_time">00:00</string>

    <string name="title_activity_how_to_play">HowToPlay</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="how_to_play_text">
        A social casual game with unpredictable events, You will face 4 modes each one has its own challenge for a specific period of time.    </string>
    <string name="how_to_play_text_easy_modes">
        The Easy mode in which the Green shape gives you score, Red shape takes from your life and grey shape takes from your score.    </string>
    <string name="how_to_play_text_sudden_death_modes">
        The Sudden Death mode in which the Green will take from you life, Red will give you score and the grey will take from your score.
    </string>
    <string name="how_to_play_text_double_tab_modes">
        The DoubleTab mode in which the green gives you double the score and Red is the same also, except the grey it will reduce double the score.
    </string>
    <string name="how_to_play_text_no_score_modes">
        The No Score mode in which all shapes do nothing.
    </string>
    <string name="how_to_play_continue">
        And then comes the Utilities which will help you to achieve your highest score:
    </string>
    <string name="how_to_play_text_gift_utility">
        The Gifts which gives you score or life.
    </string>
    <string name="how_to_play_text_bomb_utility">
        The Bombs which it will increase or decrease the game speed or it will be a bomb of the 3 colours (Red, Green, Gray) for a specific period of time.
    </string>
    <string name="how_to_play_text_dice_utility">
        The Dice represents your lucky shot which may give you score or life or takes from your score or life.
    </string>
    <string name="how_to_play_text_time_utility">
        The Stopwatch will increase the game countdown timer so you can play more.
    </string>
    <string name="how_to_play_text_other">
        You need to keep up with the game or you may lose your life or the time ends up quickly.
    </string>
</resources>
